--- a/1chan.cfg
+++ b/1chan.cfg
@@ -1,4 +1,4 @@
-// Example configuration file for jfir
+// Example configuration file for jfir - a single channel FIR only filter
 
 // client and convolution engine level parameters
 client_name = "fir-left";
@@ -8,10 +8,11 @@ input_name = "left-input";
 extra_sample_buffer = 4096;
 // sample rate currently not used
 sample_rate=48000
+
+// define outputs
 outputs = (
             {
-              port_name="tweeter-out";
-              impulse_file_name = "SimTweeter.txt";
-              number_biquads=0;
+              port_name="midrange-out";
+              impulse_file_name = "SimMidrange.txt";
             }
           );
