--- a/3way_example.cfg
+++ b/3way_example.cfg
@@ -1,4 +1,4 @@
-// Example configuration file for jfir
+// Example configuration file for jfir 3 way FIR filters
 
 // client and convolution engine level parameters
 client_name = "fir-left";
@@ -8,20 +8,19 @@ input_name = "left-input";
 extra_sample_buffer = 4096;
 // sample rate currently not used
 sample_rate=48000
+
+// output filters
 outputs = (
             {
               port_name="tweeter-out";
               impulse_file_name = "SimTweeter.txt";
-              number_biquads=0;
             },
             {
               port_name="midrange-out";
               impulse_file_name = "SimMidrange.txt";
-              number_biquads=0;
             },
             {
               port_name="woofer-out";
               impulse_file_name = "SimWoofer.txt";
-              number_biquads=0;
             }
           );
