--- a/R3way_example_bq.cfg
+++ b/R3way_example_bq.cfg
@@ -1,10 +1,10 @@
-// Example configuration file for jfir 3-way with biquads on both input and output
+// Example configuration file for jfir 3-way with biquads on both input and output (right channel)
 
 // client and convolution engine level parameters
-client_name = "fir-left";
+client_name = "fir-right";
 FFT_Length = 8192;
 filter_length = 4096;
-input_name = "left-input";
+input_name = "right-input";
 extra_sample_buffer = 4096;
 // sample rate currently not used
 sample_rate=48000
